# SimQLe

./: .connections.yaml  .connections.yaml.old  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pylama.ini  pyproject.toml  requirements.txt  run-units-tests.sh  setup.py  test-project.sh  test-requirements.txt
.github/workflows/: test-package.yml
docs/: explanation.md  how-to-guides.md  index.md  references.md  tutorials.md
features/: .connections.yaml  connection-mode.feature  defined-connections.feature  environment.py  everything.feature  fixtures.py  internal-connection-manager.feature  sqlite.feature  test-mode.feature  undefined-connection.feature
features/steps/: connection-mode.py  constants.py  general.py  return_types.py  steps.py.old  testmode.py
features/test-connection-files/: .connections-with-2-defaults.yaml  .connections-with-default.yaml  .connections-with-wrong-defaults.yaml  .connections.yaml
old/: test_connection.py  test_connections_manager.py  test_helper.py  test_recordset.py
simqle/: __init__.py  actioner.py  config_loader.py  config_validator.py  connection.py  connection_manager.py  connections.py  constants.py  container.py  exceptions.py  functions.py  interface.py  internal.py  logging.py  mode_loader.py  provider.py  simqle.py  sql_tools.py  timer.py  utility.py
simqle/recordset/: __init__.py  exceptions.py  recordset.py
tests/: test-requirements.txt  test_simqle.py
tests/integration-tests/: .connections.yaml  test_recordset.py
tests/unit/: conftest.py  (+19 more)
(+20 files in other folders)
