[tool.poetry]
name = "simqle"
version = "0.1.1"
description = ""
authors = ["Tom Malkin <tommalkin28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
