[tool.poetry]
name = "simqle"
version = "0.5.7"
description = ""
authors = ["Tom Malkin <tommalkin28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"
behave = "^1.2"
pylama = "^7.7"
mkdocs = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
