[tool.poetry]
name = "simqle"
version = "0.5.8"
description = ""
authors = ["Tom Malkin <tommalkin28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
behave = "^1.2"
pylama = "^7.7"
mkdocs = "^1.0"
pyodbc = "^4.0.32"
psycopg2 = "^2.9.1"
PyMySQL = "^1.0.2"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pylint = "^2.11.1"
mypy = "^0.971"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
